Upgrade to Java(FX) 17